fixed alignments

--- a/services/shellfish/style/shellfish.css
+++ b/services/shellfish/style/shellfish.css
@@ -64,6 +64,9 @@ textarea {
     top: 0;
     left: 0;
     bottom: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-content: center;
 }
 
 .sh-right {
@@ -71,6 +74,9 @@ textarea {
     top: 0;
     right: 0;
     bottom: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
 }
 
 .sh-font-small {
